// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.contactData is falsy 1`] = `""`;

exports[`props.contactData.location is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  />
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style="#333"
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none cli"
      >
        John
         
        Doe
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <ProfileBox
            edit={[Function]}
            style="#333"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "first_name": "John",
                "last_name": "Doe",
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      padding={false}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      hubs={
        Array [
          Object {},
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "John Doe",
            "companyName": "undefined",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
    />
  </div>
</div>
`;

exports[`props.loading is false 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  />
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style="#333"
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none cli"
      >
        John
         
        Doe
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <ProfileBox
            edit={[Function]}
            style="#333"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "first_name": "John",
                "last_name": "Doe",
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      padding={false}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      hubs={
        Array [
          Object {},
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "John Doe",
            "companyName": "undefined",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "first_name": "John",
          "last_name": "Doe",
        }
      }
      key="RANDOM_KEY_1"
      showDelete={false}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;

exports[`props.loading is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  />
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style="#333"
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none cli"
      >
        John
         
        Doe
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <ProfileBox
            edit={[Function]}
            style="#333"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "first_name": "John",
                "last_name": "Doe",
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      padding={false}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      hubs={
        Array [
          Object {},
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "John Doe",
            "companyName": "undefined",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "first_name": "John",
          "last_name": "Doe",
        }
      }
      key="RANDOM_KEY_0"
      showDelete={false}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  />
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style="#333"
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none cli"
      >
        John
         
        Doe
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <ProfileBox
            edit={[Function]}
            style="#333"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "first_name": "John",
                "last_name": "Doe",
              }
            }
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      padding={false}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      hubs={
        Array [
          Object {},
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "John Doe",
            "companyName": "undefined",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "first_name": "John",
          "last_name": "Doe",
        }
      }
      key="RANDOM_KEY_0"
      showDelete={false}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;

exports[`state.editBool is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start extra_padding"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  />
  <div
    className="flex-100 layout-row layout-align-start-stretch username_title"
  >
    <span
      className="layout-row flex-none layout-align-start-center card_padding_right"
    >
      <i
        className="fa fa-user clip bigProfile"
        style="#333"
      />
    </span>
    <div
      className="layout-align-start-center layout-row flex-70"
    >
      <h1
        className="flex-none cli"
      >
        John
         
        Doe
      </h1>
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center margin_bottom"
  >
    <GreyBox
      borderStyle=""
      content={
        <div
          className="layout-row flex-100"
        >
          <EditProfileBox
            close={[Function]}
            handleChange={[Function]}
            onSave={[Function]}
            style="#333"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={Object {}}
          />
        </div>
      }
      contentClassName="layout-row flex"
      flex={0}
      flexGtLg={0}
      flexMd={0}
      fullWidth={false}
      isBox={false}
      padding={false}
      title=""
      titleAction={false}
      wrapperClassName="flex-gt-sm-66 flex-100 layout-row layout-align-start-center "
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <AdminSearchableShipments
      hubs={
        Array [
          Object {},
        ]
      }
      limit={5}
      seeAll={false}
      shipments={
        Array [
          Object {
            "clientName": "John Doe",
            "companyName": "undefined",
            "schedule_set": Array [
              Object {
                "hub_route_key": "foo-bar",
              },
            ],
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      title="Related Shipments"
    />
  </div>
  <div
    className="layout-row flex-100 layout-wrap layout-align-start-center"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Locations
          </b>
        </span>
      </div>
    </div>
    <AdminAddressTile
      address={[Function]}
      client={
        Object {
          "first_name": "John",
          "last_name": "Doe",
        }
      }
      key="RANDOM_KEY_1"
      showDelete={false}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
    />
  </div>
</div>
`;
